penambahan dark mode dan perbaikan bug

--- a/todo-app/style.css
+++ b/todo-app/style.css
@@ -3,10 +3,74 @@
     box-sizing: border-box;
 }
 
+:root {
+    /* Background */
+    --bg: #ffffff;
+    --bg-secondary: #F3F3F3;
+    --card: #ffffff;
+    --footer-bg: #E9ECEF;
+
+    /* Text */
+    --text: #111111;
+    --text-muted: #687082;
+    
+
+    /* Dark Icon */
+    --bg-icon: #F4F6F9;
+    --icon-color: #6C757D;
+    --icon-filter: none;
+
+    /* Checkbox */
+    --checkbox-bg: #2563EB;
+    --checkbox-text: #ffffff;
+
+    /* Accent / Button */
+    --primary: #2563EB;
+    --primary-hover: #1d4ed8;
+
+    /* Status colors */
+    --blue: #3B82F6;
+    --green: #22C55E;
+
+    --hover-bg: rgba(47, 47, 47, 0.178);
+    --active-bg: rgba(68, 68, 68, 0.571);
+
+    --hover-task: rgba(60, 60, 60, 0.416); 
+    --active-task: rgba(60, 60, 60, 0.689);
+
+    /* Border */
+    --border: #2e2e2e;
+}
+
+body.dark {
+    --bg: #121212;
+    --bg-secondary: #1e1e1e;
+    --card: #1e1e1e;
+    --footer-bg: #1E293B;
+
+    --checkbox-bg: #70706E;
+    --checkbox-text: #2B2B32;
+
+    --bg-icon: #1E293B;
+    --icon-color: #FEF08A;
+    --icon-filter: drop-shadow(0 0 10px rgba(254, 240, 138, 0.7));
+
+    --text: #ffffff;
+    --text-muted: #94a3b8;
+
+    --primary: #3b82f6;
+    --primary-hover: #3b82f6;
+
+    --hover-bg: rgba(255, 255, 255, 0.096);
+    --active-bg: rgba(255, 255, 255, 0.292);
+
+    --border: #3a3a3a;
+}
+
 body {
     font-family: "Poppins";
-    background-color: #121212;
-    color: white;
+    background-color: var(--bg-secondary);
+    color: var(--text);
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -45,8 +109,48 @@ header {
     font-size: 14px;
 }
 
+.header-right a:hover {
+    filter: brightness(1.1);
+}
+
+.header-right a:active {
+    filter: brightness(1.3);
+}
+
 .header-right i {
     font-size: 4px;
+}
+
+.nav-container {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+}
+
+.nav-container span {
+    font-size: 24px;
+    width: 35px;
+    height: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    border-radius: 50%;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.nav-container span svg {
+    color: var(--icon-color);
+    filter: var(--icon-filter);
+}
+
+
+.nav-container span:hover {
+    background-color: var(--hover-bg);
+}
+
+.nav-container span:active {
+    background-color: var(--active-bg);
 }
 
 main {
@@ -57,15 +161,15 @@ main {
 }
 
 .gray {
-    color: #687082;
+    color: var(--text-muted);
 }
 
-.yellow {
-    color: #B5A508;
+.blue {
+    color: var(--blue);
 }
 
 .green {
-    color: #217F44;
+    color: var(--green);
 }
 
 .task-card-header, .task-container {
@@ -73,7 +177,7 @@ main {
     grid-template-columns: 50px 2fr 1fr 1fr 1fr 1fr;
     padding: 10px 0;
     align-items: center;
-    background-color: #1E1E1E;
+    background-color: var(--bg);
     margin: 10px 0;
     padding: 10px;
     border-radius: 6px;
@@ -83,8 +187,14 @@ main {
 
 .hover:hover {
     cursor: pointer;
-    filter: brightness(1.5);
+    filter: brightness(1.2);
 }
+
+.hover:active {
+    cursor: pointer;
+    filter: brightness(1.4);
+}
+
 
 
 
@@ -108,37 +218,65 @@ main {
 .checkmark {
     width: 15px;
     height: 15px;
-    border: 1px solid #70706E;
+    border: 1px solid var(--border);
     position: relative;
     display: inline-block;
     border-radius: 3px;
+    cursor: pointer;
 }
 
 .completed {
     text-decoration: line-through;
-    color: #687082;
+    color: var(--text-muted);
 }
 
 .done input:checked + .checkmark {
-    background-color: #70706E;
+    background-color: var(--checkbox-bg);
 }
 
 .done input:checked + .checkmark::after {
     content: "✔";
     position: absolute;
     inset: 0;
-    color: #2B2B29;
+    color: var(--checkbox-text);
     font-size: 11px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+.hoverable {
+    display: flex;
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+    width: 30px;
+    height: 30px;
+}
+
+.hoverable2 {
+    display: flex;
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+    padding: 8px;
+    width: 20px;
+    height: 20px;
+}
+
+.hoverable:hover, .hoverable2:hover {
+    background-color: var(--hover-bg);
+}
+
+.hoverable:active, .hoverable2:active {
+    background-color: var(--active-bg);
+}
+
 .edit-btn, .delete-btn {
     background: none;
     background-color: transparent;
     border: none;
-    color: white;
+    color: var(--text);
     cursor: pointer;
 }
 
@@ -149,14 +287,21 @@ main {
     text-decoration: none;
 }
 
+.status {
+  padding: 4px 10px;
+  font-size: 12px;
+  font-weight: 500;
+}
+
+
 
 
 
 /* Styling Form Tambah Task */
 .add-task-form {
-    background-color: #1e1e1e;
+    background-color: var(--bg);
     padding: 20px;
-    width: 50vw;
+    width: 60vw;
     border-radius: 12px;
     border: 1px border #2e2e2e;
     margin: 10px auto;
@@ -176,7 +321,7 @@ main {
 
 .header button {
     background: none;
-    color: white;
+    color: var(--text);
     border: none;
     cursor: pointer;
 }
@@ -191,7 +336,7 @@ main {
 
 .input-group label {
     font-size: 13px;
-    color: #94a3b8;
+    color: var(--label-text);
     font-weight: 500;
 }
 
@@ -208,7 +353,7 @@ main {
 }
 
 .input-group input[type="date"] {
-    color: #687082;
+    color: var(--text-muted);
 }
 
 .input-group input[type="date"]:valid {
@@ -224,7 +369,7 @@ main {
 }
 
 .input-group input:focus, .input-group textarea:focus {
-    border-color: #3b82f6;
+    border-color: var(--primary-hover);
 }
 
 .btn-submit {
@@ -246,15 +391,20 @@ main {
     filter: brightness(1.1);
 }
 
+.btn-submit:active {
+    filter: brightness(1.3);
+}
+
 .hidden {
     display: none !important;
 }
 
 footer {
-    background: #020617;
-    color: #687082;
+    background: var(--footer-bg);
+    color: var(--text-muted);
     padding: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
